[package]
name = "piston-app"
version = "1.5.2"
authors = ["Frédéric Hamidi <frederic.hamidi@gmail.com>"]
edition = "2018"

[dependencies]
fnv = "1.0.6"
fps_counter = "1.0.0"
gfx = "0.17.1"
gfx_device_gl = "0.15.3"
noise = "0.5.1"
piston-shaders_graphics2d = "0.3.1"
piston_window = "0.80.0"
pistoncore-sdl2_window = "0.50.0"
rand = "0.6"
serde_json = "1.0.39"
vecmath = "0.3.1"

